# lice-tddschn

./: .bumpversion.cfg  README.md  pyproject.toml  setup.py
lice_tddschn/: __init__.py  core.py
lice_tddschn/tests/: test_lice.py
